<resources>
    <string name="app_name">Snoozz</string>
    <string name="app_copyright">2019–21 the Snoozz Authors</string>
    <string name="app_license_url">https://github.com/ashutoshgngwr/Snoozz/blob/master/LICENSE</string>
    <string name="app_authors_url">https://ashutoshgngwr.github.io/Snoozz/contributors</string>
    <string name="app_changelog">https://ashutoshgngwr.github.io/Snoozz/CHANGELOG</string>
    <string name="app_website">https://ashutoshgngwr.github.io/Snoozz</string>
    <string name="app_github_url">https://github.com/ashutoshgngwr/Snoozz</string>
    <string name="app_issues_github_url">https://forms.gle/jgJyqEfpkjBUAYBK7</string>
    <string name="app_issues_form_url">https://forms.gle/jgJyqEfpkjBUAYBK7
    </string>
    <string name="feedback_form_url">https://forms.gle/nagNaFWZdUn8qK579
  </string>
    <string name="plus1m">1m</string>
    <string name="plus5m">5m</string>
    <string name="plus30m">30m</string>
    <string name="plus1h">1h</string>
    <string name="plus4h">4h</string>
    <string name="plus8h">8h</string>
    <string name="saved_presets_as_home_screen_key">pref_saved_presets_as_homescreen</string>
    <string name="sound_fade_duration_key">sound_fade_duration</string>
    <string name="sound_fade_in_duration_key">sound_fade_in_duration</string>
    <string name="app_theme_key">app_theme</string>
    <string name="ignore_audio_focus_changes_key">ignore_audio_focus_changes</string>
    <string name="import_presets_key">import_presets</string>
    <string name="export_presets_key">export_presets</string>
    <string name="remove_all_app_shortcuts_key">remove_all_app_shortcuts</string>
    <string name="should_display_sound_icons_key">should_display_sound_icons</string>
    <string name="others_key">others</string>
    <string name="should_share_usage_data_key">should_share_usage_data</string>
    <string name="should_allow_skipping_unsaved_presets_key">should_allow_skipping_unsaved_presets</string>
    <string name="title_home">Home</string>
    <string name="title_compose">Compose</string>
    <string name="title_settings">Settings</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="notification_message">Playing Create Mode</string>
    <string name="buy_me_a_coffee">Buy me a Coffee</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="topic_feedback">Subject…</string>
    <string name="start_timer">Start</string>
    <string name="cancel_timer">Cancel</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_04_39_11">04:39:11</string>
    <string name="what_sets_us_apart_title">What Sets Us Apart:</string>
    <string name="what_sets_us_apart_description">Snoozz. stands out from the crowd with our commitment to delivering an entirely ad-free experience to our users. We understand the value of uninterrupted tranquility and have diligently crafted a platform that ensures our users can immerse themselves in a world of calming melodies without any distractions.\n\nAdditionally, our team of expert sound engineers and meditation specialists work tirelessly to curate a diverse collection of high-quality sounds, encompassing everything from nature-inspired melodies to mindfulness-inducing compositions. This dedication to excellence ensures that Snoozz. remains at the forefront of relaxation technology.</string>
    <string name="our_vision_title">Our Vision:</string>
    <string name="our_vision_description">Driven by our passion for enhancing the overall well-being of our users, we envision a world where every person can effortlessly access a sanctuary of peace through our cutting-edge relaxation solutions. We aim to be the go-to destination for anyone seeking respite from stress and anxiety, delivering an unparalleled auditory experience that touches the soul.</string>
    <string name="our_mission_title">Our Mission:</string>
    <string name="our_mission_description">At Snoozz, our mission is to empower individuals to achieve mental wellness and rejuvenation by providing them with a seamless and ad-free platform that offers an extensive array of soothing sounds and calming melodies. We strive to promote a healthier and happier lifestyle by encouraging users to disconnect from the world\'s chaos and find serenity within themselves.</string>
    <string name="about_snoozz_title">About Snoozz</string>
    <string name="about_snoozz_subtitle">Snoozz. is a leading tech company dedicated to creating innovative and immersive relaxation experiences for users seeking tranquility and inner peace. Established with a vision to revolutionize the way people unwind and find solace in their busy lives, Snoozz. has become synonymous with the art of relaxation.</string>
    <string name="feedback_title">Feedback</string>
    <string name="custom_createTitle">Create</string>
    <string name="custom_createSubTitle">Your Musical Oasis Awaits. Explore, Mix, and Relax!</string>
    <string name="made_in_india_text">Made with ❤️ in India</string>
    <string name="buy_me_a_coffee_text">Buy me a Coffee</string>
    <string name="about_us_text">About Us</string>
    <string name="review_text">Review</string>
    <string name="notifications_text">ignore_audio_focus_changes</string>
    <string name="home_title">Redefining Rest for Mind, Body, and Soul</string>
    <string name="home_halt_instruction">To halt the animation, simply click on it.</string>
    <string name="home_breathing_title">Breathing Exercises</string>
    <string name="home_relaxing_title">Relaxing Sounds</string>
    <string name="home_scroll_title">Scroll for more</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="library">Library</string>
    <string name="report_issue">Report Issues</string>
    <string name="saved_presets">Saved Presets</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="support_development">Support Development</string>
    <string name="wake_up_timer">Wake-up Timer</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="mood_any">Any</string>
    <string name="intensity_any">Any</string>
    <string name="dense">Dense</string>
    <string name="focus">Focus</string>
    <string name="intensity">Intensity</string>
    <string name="random_preset_description">Generated random presets will contain sounds corresponding to the chosen mood. Moreover, dense presets will attempt to play more sounds simultaneously.</string>
    <string name="light">Light</string>
    <string name="mood">Mood</string>
    <string name="okay">Okay</string>
    <string name="random_preset">Random Preset</string>
    <string name="relax">Relax</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="pause">Pause</string>
    <string name="preset_already_exists">Preset with the given name already exists!</string>
    <string name="preset_name_cannot_be_empty">Preset name cannot be empty!</string>
    <string name="preset_saved">Preset saved!</string>
    <string name="save">Save</string>
    <string name="save_preset">Save Preset</string>
    <string name="play">Play</string>
    <string name="play_pause">play or pause</string>
    <string name="repeat_time_period">Repeat time period</string>
    <string name="stop">Stop</string>
    <string name="volume">Sound volume</string>
    <string name="sound_group__life">Life</string>
    <string name="sound_group__monsoon">Monsoon</string>
    <string name="sound_group__public_gatherings">Public Gatherings</string>
    <string name="sound_group__raw_noise">Raw Noise</string>
    <string name="sound_group__times_of_day">Times of Day</string>
    <string name="sound_group__vehicles">Vehicles</string>
    <string name="sound_group__water">Water</string>
    <string name="sound_group__wind">Wind</string>
    <string name="airplane_inflight">Airplane in-flight</string>
    <string name="airplane_seatbelt_beeps">Airplane seat-belt beeps</string>
    <string name="birds">Birds</string>
    <string name="bonfire">Bonfire</string>
    <string name="brownian_noise">Brownian noise</string>
    <string name="coffee_shop">Coffee shop</string>
    <string name="creaking_ship">Creaking ship</string>
    <string name="crickets">Crickets</string>
    <string name="distant_thunder">Distant thunder</string>
    <string name="electric_car">Electric car</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="howling_wolf">Howling wolf</string>
    <string name="human_heartbeat">Human heartbeat</string>
    <string name="light_rain">Light rain</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="morning_in_a_village">Morning in a village</string>
    <string name="moving_train">Moving train</string>
    <string name="night">Night</string>
    <string name="office">Office</string>
    <string name="om_chanting">Om chanting</string>
    <string name="pink_noise">Pink noise</string>
    <string name="public_library">Public library</string>
    <string name="purring_cat">Purring cat</string>
    <string name="quiet_conversation">Quiet conversation</string>
    <string name="rolling_thunder">Rolling thunder</string>
    <string name="screeching_seagulls">Screeching seagulls</string>
    <string name="seaside">Seaside</string>
    <string name="soft_wind">Soft wind</string>
    <string name="thunder_crack">Thunder crack</string>
    <string name="train_horn">Train horn</string>
    <string name="walking_through_the_snow">Walking through the snow</string>
    <string name="water_hose">Water hose</string>
    <string name="water_stream">Water stream</string>
    <string name="white_noise">White noise</string>
    <string name="wind_in_chimes_of_shells">Wind in chimes of shells</string>
    <string name="wind_in_palm_trees">Wind in palm trees</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="delete">Delete</string>
    <string name="open_context_menu">Open context menu</string>
    <string name="preset_delete_confirmation">Confirm delete %s?</string>
    <string name="preset_deleted">Preset deleted!</string>
    <string name="preset_does_not_exist">Preset does not exist. It may have been deleted!</string>
    <string name="preset_info__description">
    You haven\'t created any presets yet. To create a preset, go to the Compose and play sounds.
    Then click on the Save button that appears on the bottom corner of the screen.
  </string>
    <string name="rename">Rename</string>
    <string name="pinned_shortcuts_not_supported">Your default launcher does not support adding shortcuts.</string>
    <string name="saved_presets_as_home_screen_summary">Show \"saved presets\" on app startup (requires app restart)</string>
    <string name="auto_sleep_schedule_cancelled">Auto sleep timer cancelled!</string>
    <string name="reset">Reset</string>
    <string name="sleep_timer_description">
    Snoozz will shutdown itself when the timer ends. Use the buttons below to add time and start
    the timer.
  </string>
    <string name="schedule">Schedule</string>
    <string name="select_preset">Select Preset</string>
    <string name="wake_up_timer_cancelled">Wake-up Timer cancelled!</string>
    <string name="wake_up_timer_schedule_set">The alarm will go off in %1$s %2$s %3$s</string>
    <string name="time_bridge">and</string>
    <plurals name="time_hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>
    <string name="preset">Preset</string>
    <string name="timer">Timer</string>
</resources>