<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/home_tab_selector"
        android:title="@string/title_home"
       />

    <item
        android:id="@+id/navigation_compose"
        android:enabled="true"
        android:icon="@drawable/compose_tab_selector"
        android:title="@string/title_compose" />

    <item
        android:id="@+id/navigation_presets"
        android:enabled="true"
        android:icon="@drawable/preset_tab_selector"
        android:title="@string/preset" />

    <item
        android:id="@+id/navigation_timer"
        android:enabled="true"
        android:icon="@drawable/timer_tab_selector"
        android:title="@string/timer" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/setting_tab_selector"
        android:title="@string/title_settings" />

</menu>