<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
    android:background="@color/darkBackground"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/random_preset"
        android:fontFamily="@font/core_sans_medium"
      android:textAppearance="?attr/titleTextAppearance"
        android:textColor="@color/primary_text"/>

    <Space
      android:layout_width="match_parent"
      android:layout_height="24dp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:fontFamily="@font/core_sans_medium"
      android:text="@string/random_preset_description"
      android:textAppearance="?android:attr/textAppearance"
        android:textColor="@color/primary_text"/>

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mood"
        android:fontFamily="@font/core_sans_medium"
      android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/torquise_light"/>

    <Space
      android:layout_width="match_parent"
      android:layout_height="8dp" />

    <com.hopenlib.flextools.FlexRadioGroup
      android:id="@+id/preset_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:alignContent="stretch"
      app:alignItems="stretch"
      app:flexCheckedButton="@id/preset_type__any"
      app:flexWrap="wrap">

      <RadioButton
        android:id="@+id/preset_type__any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/mood_any"
          android:textColor="@color/primary_text"/>

      <RadioButton
        android:id="@+id/preset_type__focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/focus"
          android:textColor="@color/primary_text"/>

      <RadioButton
        android:id="@+id/preset_type__relax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/relax"
          android:textColor="@color/primary_text"/>

    </com.hopenlib.flextools.FlexRadioGroup>

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/intensity"
        android:fontFamily="@font/core_sans_medium"
      android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/torquise_light"/>

    <Space
      android:layout_width="match_parent"
      android:layout_height="8dp" />

    <com.hopenlib.flextools.FlexRadioGroup
      android:id="@+id/preset_intensity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:alignContent="stretch"
      app:alignItems="stretch"
      app:flexCheckedButton="@id/preset_intensity__any"
      app:flexWrap="wrap">

      <RadioButton
        android:id="@+id/preset_intensity__any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/intensity_any"
          android:textColor="@color/primary_text"/>

      <RadioButton
        android:id="@+id/preset_intensity__light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/light"
          android:textColor="@color/primary_text"/>

      <RadioButton
        android:id="@+id/preset_intensity__dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/dense"
          android:textColor="@color/primary_text"/>

    </com.hopenlib.flextools.FlexRadioGroup>

    <Space
      android:layout_width="match_parent"
      android:layout_height="24dp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="end">

      <Button
        android:id="@+id/cancel_button"
        style="?attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

      <Button
        android:id="@+id/play_button"
        style="?attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    </LinearLayout>

  </LinearLayout>

</androidx.core.widget.NestedScrollView>
